--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15"
-rumqttc = "0.10"
+rumqttc = "0.24"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+colored = "2.0"
+indicatif = "0.17"
