--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 colored = "2.0"
 indicatif = "0.17"
+rdkafka = { version = "0.36", features = ["ssl"] }
+tokio = { version = "1", features = ["full"] }
